snapshots/tests/form/endless_runner_game_vb6_0/endless_runner_game_vb6_0_howtoplay_form_load.snap
---
source: vb6parse/tests/form/endless_runner_game_vb6_0.rs
expression: form_file
---
form:
  Form:
    name: howtoplay
    tag: ""
    index: 0
    properties:
      appearance: ThreeD
      auto_redraw: Manual
      back_color:
        System:
          index: 15
      border_style: Sizable
      caption: Form6
      client_height: 3015
      client_left: 120
      client_top: 465
      client_width: 4560
      clip_controls: Clipped
      control_box: Included
      draw_mode: CopyPen
      draw_style: Solid
      draw_width: 1
      enabled: Enabled
      fill_color:
        System:
          index: 0
      fill_style: Transparent
      font:
        name: MS Sans Serif
        size: 8
        charset: 0
        weight: 400
        underline: false
        italic: false
        strikethrough: false
      font_transparent: Transparent
      fore_color:
        System:
          index: 18
      has_dc: HasContext
      height: 240
      help_context_id: 0
      icon: ~
      key_preview: false
      left: 0
      link_mode: None
      link_topic: Form6
      max_button: Included
      mdi_child: false
      min_button: Included
      mouse_icon: ~
      mouse_pointer: Default
      moveable: Moveable
      negotiate_menus: true
      ole_drop_mode: None
      palette: ~
      palette_mode: HalfTone
      picture: ~
      right_to_left: LeftToRight
      scale_height: 3015
      scale_left: 0
      scale_mode: Twip
      scale_top: 0
      scale_width: 4560
      show_in_taskbar: Show
      start_up_position: WindowsDefault
      top: 0
      visible: Visible
      whats_this_button: Excluded
      whats_this_help: F1Help
      width: 240
      window_state: Normal
    controls:
      - name: Image1
        tag: ""
        index: 0
        kind:
          Image:
            properties:
              appearance: ThreeD
              border_style: None
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              height: 1845
              left: 5640
              mouse_icon: ~
              mouse_pointer: Default
              ole_drag_mode: Manual
              ole_drop_mode: None
              picture: ~
              stretch: false
              tool_tip_text: ""
              top: 9000
              visible: Visible
              whats_this_help_id: 0
              width: 2220
      - name: Label3
        tag: ""
        index: 0
        kind:
          Label:
            properties:
              alignment: LeftJustify
              appearance: ThreeD
              auto_size: Fixed
              back_color:
                RGB:
                  red: 192
                  green: 255
                  blue: 255
              back_style: Opaque
              border_style: None
              caption: Avoid Obstacles
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                System:
                  index: 18
              height: 2055
              left: 8400
              link_item: ""
              link_mode: None
              link_timeout: 50
              link_topic: ""
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              right_to_left: LeftToRight
              tab_index: 2
              tool_tip_text: ""
              top: 9000
              use_mnemonic: true
              visible: Visible
              whats_this_help_id: 0
              width: 7215
              word_wrap: NonWrapping
      - name: Image3
        tag: ""
        index: 0
        kind:
          Image:
            properties:
              appearance: ThreeD
              border_style: None
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              height: 1845
              left: 5280
              mouse_icon: ~
              mouse_pointer: Default
              ole_drag_mode: Manual
              ole_drop_mode: None
              picture: ~
              stretch: false
              tool_tip_text: ""
              top: 3840
              visible: Visible
              whats_this_help_id: 0
              width: 2580
      - name: Label2
        tag: ""
        index: 0
        kind:
          Label:
            properties:
              alignment: LeftJustify
              appearance: ThreeD
              auto_size: Fixed
              back_color:
                RGB:
                  red: 192
                  green: 255
                  blue: 255
              back_style: Opaque
              border_style: None
              caption: press s to jump down
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                System:
                  index: 18
              height: 2055
              left: 8400
              link_item: ""
              link_mode: None
              link_timeout: 50
              link_topic: ""
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              right_to_left: LeftToRight
              tab_index: 1
              tool_tip_text: ""
              top: 6480
              use_mnemonic: true
              visible: Visible
              whats_this_help_id: 0
              width: 7215
              word_wrap: NonWrapping
      - name: Image2
        tag: ""
        index: 0
        kind:
          Image:
            properties:
              appearance: ThreeD
              border_style: None
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              height: 1845
              left: 5520
              mouse_icon: ~
              mouse_pointer: Default
              ole_drag_mode: Manual
              ole_drop_mode: None
              picture: ~
              stretch: false
              tool_tip_text: ""
              top: 6600
              visible: Visible
              whats_this_help_id: 0
              width: 2220
      - name: Label1
        tag: ""
        index: 0
        kind:
          Label:
            properties:
              alignment: LeftJustify
              appearance: ThreeD
              auto_size: Fixed
              back_color:
                RGB:
                  red: 192
                  green: 255
                  blue: 255
              back_style: Opaque
              border_style: None
              caption: press w to jump up
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                System:
                  index: 18
              height: 2055
              left: 8400
              link_item: ""
              link_mode: None
              link_timeout: 50
              link_topic: ""
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              right_to_left: LeftToRight
              tab_index: 0
              tool_tip_text: ""
              top: 3960
              use_mnemonic: true
              visible: Visible
              whats_this_help_id: 0
              width: 7215
              word_wrap: NonWrapping
      - name: Shape1
        tag: ""
        index: 0
        kind:
          Shape:
            properties:
              back_color:
                RGB:
                  red: 255
                  green: 192
                  blue: 128
              back_style: Transparent
              border_color:
                System:
                  index: 8
              border_style: Solid
              border_width: 1
              draw_mode: CopyPen
              fill_color:
                RGB:
                  red: 255
                  green: 128
                  blue: 128
              fill_style: Transparent
              height: 8775
              left: 5040
              shape: Rectangle
              top: 2880
              visible: Visible
              width: 11775
    menus: []
objects: []
version:
  major: 5
  minor: 0
attributes:
  name: howtoplay
  global_name_space: Local
  creatable: "False"
  predeclared_id: "True"
  exposed: "False"
  description: ~
  ext_key: {}
cst:
  root:
    kind: Root
    children: []
